# funda-insights

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml  scraping.ipynb
dashboard/: main.py  utils.py
funda_insights/: funda_data_retriever.py  preprocess.py  scrape_utils.py
funda_insights/backend/: funda_data_retriever.py  preprocess.py  scrape_utils.py
funda_insights/config/: __init__.py  house_features.yaml
funda_insights/frontend/: filters.py  main.py  utils.py  visualizations.py
notebooks/: scraping.ipynb
