[tool.poetry]
name = "funda-insights"
version = "0.dev"
description = "A project to gain insights into the housing markrt using funda."
authors = ["Mark Berger <maberger0811@gmail.com>", "Ronald van Velzen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
jupyterlab = "^4.0.10"
ipykernel = "^6.29.0"
bs4 = "^0.0.2"
lxml = "^5.1.0"
funda-scraper = "^1.0.11"
streamlit = "^1.31.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
